fix single command colors in dark mode

--- a/themes/hugo-geekdoc/assets/styles/_markdown.scss
+++ b/themes/hugo-geekdoc/assets/styles/_markdown.scss
@@ -197,7 +197,7 @@
   code {
     // background-color: var(--code-background);
     border-radius: $border-radius;
-    color: var(--code-font-color);
+    //color: var(--code-font-color);
     //font-size: 0.85rem;
     line-height: 1.45em;
   }
